--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-transition-group": "^4.4.5",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
