--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-transition-group": "^4.4.5",
-    "tailwind-scrollbar-hide": "^2.0.0"
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
